added stream, need to retrieve comments and followers now
